# cherokee-reworked

./: CMakeLists.txt  README.md  Untitled Diagram.drawio  cherokee.cpp  readme.md
server/: server.cpp  server.hpp
server/infra/logging/: CherokeeLogger.hpp  Welcome.cpp
server/worker/: worker.cpp
src/: cherokee.cpp
src/server/: server.cpp  server.hpp
src/worker/: worker.hpp
